[package]
name = "cryptory"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["stream"] }
tokio = { version = "1.44.1", features = ["fs", "io-std", "macros", "rt-multi-thread", "sync"] }
